--- a/paper_checking/MainForm.resx
+++ b/paper_checking/MainForm.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="textBox4.Text" xml:space="preserve">
+  <data name="richTextBox1.Text" xml:space="preserve">
     <value>系统使用说明
 1、该系统只支持简体中文文本查重，其它语言查重时结果不保证可信度，且可能提示失败。
 2、横向查重：比较同一批次内是否存在横向抄袭的问题。应用场景举例：比较该批次一百篇论文之间有没有互相抄袭的情况。
@@ -134,8 +134,6 @@
 3、使用“添加到比对库”功能时，请先将待添加的文件放入一个文件夹，然后再下面的路径选择框上选择该文件夹，然后点击"添加到比对库"。之后按钮会变灰，等待按钮恢复正常即可，如文件数很多 整个过程较慢，请耐心等待。
 4、比对库中的文件使用文件名作为唯一标识，如果存在同名文件，后添加到比对库的文件将被直接忽略。建议自行规范文件名，如使用文件编号或学号开头。
 5、如需要查看或删除已添加到比对库中的论文，请在安装目录的“txtPaperSource”文件夹下手工查看、删除。
-6、将一些可能影响重复率的关键词添加到关键词过滤功能中，在查重时会将待查文本中出现的关键词全部删除，以避免它们对重复率的影响。这类关键词通常可能为学校名、机构名等。
-
-声明：本查重报告上的所有内容仅供参考。商业合作、技术咨询及BUG反馈可联系微信：di18810760681，或QQ：1253332375</value>
+6、将一些可能影响重复率的关键词添加到关键词过滤功能中，在查重时会将待查文本中出现的关键词全部删除，以避免它们对重复率的影响。</value>
   </data>
 </root>
